# vStrike

./: .gitignore  CMakeLists.txt  README.md  logger.md  main.cpp
DSP/: audio_engine.h  test.cpp
UI/: HealthBar.cpp  HealthBar.h  fader.h
core/: aiView.h  gameView.h  localView.h
entities/: ball.cpp  ball.h  paddle.cpp  paddle.h
global/: constants.h  customFont.h
global/states/: gameScreen.h  gameStates.h  masterIncluder.h  menuScreen.h  modeSelection.h  settingScreen.h
physics/: physicsEngine.cpp  physicsEngine.h
